--- a/styles/intro.css
+++ b/styles/intro.css
@@ -29,6 +29,7 @@
 @media (max-width: 1199px) {
   .intro h1 {
     font-size: 50px;
+    width: 780px;
   }
 
   .intro__image {
@@ -58,10 +59,6 @@
     font-size: 30px;
     line-height: 32px;
     width: 332px;
-  }
-
-  br {
-    display: none;
   }
 
   .intro__image {
