--- a/styles/main.css
+++ b/styles/main.css
@@ -46,7 +46,7 @@ a {
 @media (max-width: 767px) {
   .container {
     margin-bottom: 80px;
-    padding-left: 17px;
+    padding-left: 16px;
     padding-right: 15px;
   }
 
