--- a/styles/services.css
+++ b/styles/services.css
@@ -78,7 +78,6 @@
 
 @media (max-width: 1199px) {
   .padded {
-    margin-top: -21px;
     padding-bottom: 117px;
   }
 
@@ -118,7 +117,7 @@
 @media (max-width: 767px) {
   .padded {
     padding-top: 80px;
-    padding-bottom: 80px;
+    padding-bottom: 79px;
   }
 
   .services h2 {
@@ -128,33 +127,42 @@
     line-height: 19px;
   }
 
+  .services__wrapper {
+    flex-direction: column;
+  }
+
   .service__item {
     margin-bottom: 60px;
     width: 100%;
   }
 
   .service__image {
-    margin-bottom: 10px;
-    height: 240px;
+    margin-bottom: 8px;
+    height: 239px;
+    object-fit: cover;
   }
 
   .services p {
-    padding-left: 0;
     color: #ffffff;
     font-size: 18px;
     line-height: 25px;
   }
 
   .service__image_box p {
-    padding: 0 24px;
+    padding: 0 25px;
     left: 24px;
     top: 23px;
     font-size: 14px;
+    line-height: 30px;
+    height: 30px;
   }
 
   .orderService {
-    padding: 37px 0;
+    padding: 36px 0;
     font-size: 22px;
     line-height: 30px;
+    height: 100px;
+    border-radius: 4px;
+    width: 101%;
   }
 }
